# mindia

./: .dockerignore  .env.example  .flyignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.with-clamav  LICENSE  Makefile  NOTE.txt  README.md  SECURITY.md  TODO.txt  config.yaml  docker-compose.yml  docker-entrypoint.sh  fly.toml  go.mod  go.sum  main.go  package.json  rustfmt.toml  supervisord.conf
.cargo/: audit.toml  config.toml
.grafana/: README.md  alloy-config.river  docker-compose.yml  prometheus-config.yaml  tempo-config.yaml
apiserver/: apiserver.go  router.go
automation/: automation.go  context.go  jpeg_converter.go  namer.go  namer_suffix.go  namer_uuid.go  resizer.go  sinker.go  source.go  step.go  tagger.go  types.go  watermarker.go
backup/: backup.go
cli/: cli.go  cli_test.go
configurer/: config.go  configurer.go
crates/mindia-api/: Cargo.toml
crates/mindia-api-client/: Cargo.toml
crates/mindia-api-client/src/: api.rs  lib.rs
crates/mindia-api/src/: api_doc.rs  error.rs  http_metrics.rs  job_queue.rs  landlock.rs  lib.rs  main.rs  state.rs  task_dispatch.rs  validation.rs  video_storage_impl.rs
crates/mindia-api/src/auth/: api_key.rs  jwt.rs  jwt_rs256.rs  middleware.rs  models.rs
crates/mindia-api/src/handlers/: analytics.rs  api_keys.rs  audio_download.rs  audio_get.rs  audio_upload.rs  batch_media.rs  chunked_upload.rs  config.rs  document_download.rs  document_get.rs  document_upload.rs  file_group.rs  folders.rs  image_download.rs  image_get.rs  image_upload.rs  image_upload_url.rs  media_delete.rs  media_get.rs  metadata.rs  mod.rs  named_transformations.rs  plugins.rs  presigned_upload.rs  public_file.rs  search.rs  tasks.rs  video_get.rs  video_stream.rs  video_upload.rs  webhooks.rs  workflows.rs
crates/mindia-api/src/handlers/transform/: mod.rs
crates/mindia-api/src/middleware/: analytics.rs  idempotency.rs  mod.rs  security_headers.rs  wide_event.rs
crates/mindia-api/src/plugins/: mod.rs  service.rs
crates/mindia-api/src/plugins/impls/: openai_image_description.rs
crates/mindia-api/src/services/: email.rs  media_lifecycle.rs  mod.rs  workflow.rs
crates/mindia-api/src/services/upload/: audio_processor.rs  clamav_scanner.rs  config_impls.rs  image_processor.rs  mod.rs  service.rs  traits.rs  types.rs  video_processor.rs
crates/mindia-api/src/setup/: database.rs  mod.rs  routes.rs  server.rs  services.rs  storage.rs  validation.rs
crates/mindia-api/src/setup/routes/: domains.rs  health.rs  mod.rs
crates/mindia-api/src/task_handlers/: content_moderation_handler.rs  embedding_handler.rs  mod.rs  plugin_handler.rs  video_handler.rs
crates/mindia-api/src/telemetry/: init.rs  metrics.rs  pool_metrics.rs  wide_event.rs
crates/mindia-api/src/utils/: ip_extraction.rs  mod.rs  public_file_token.rs  ssrf_validation.rs  transaction.rs  upload.rs
crates/mindia-api/tests/: images_test.rs  search_test.rs  workflow_test.rs
crates/mindia-api/tests/helpers/: auth.rs  fixtures.rs  mod.rs  storage.rs  workflows.rs
crates/mindia-cli/: Cargo.toml
crates/mindia-cli/src/: lib.rs  main.rs
crates/mindia-core/: Cargo.toml
crates/mindia-core/src/: capacity_gate.rs  config.rs  constants.rs  encryption.rs  error.rs  lib.rs  transform_url.rs
crates/mindia-core/src/models/: analytics.rs  audio.rs  billing.rs  document.rs  file_group.rs  folder.rs  image.rs  media.rs  mod.rs  named_transformation.rs  organization.rs  plugin.rs  presigned_upload.rs  search.rs  task.rs  usage.rs  video.rs  webhook.rs  workflow.rs
crates/mindia-core/src/validation/: metadata.rs
crates/mindia-db/: Cargo.toml
crates/mindia-db/src/: lib.rs  plugin_traits.rs
crates/mindia-db/src/db/: mod.rs  transaction.rs
crates/mindia-db/src/db/control/: api_key.rs  mod.rs
crates/mindia-db/src/db/media/: analytics.rs  embedding.rs  file_group.rs  folder.rs  media.rs  metadata_search.rs  mod.rs  plugin.rs  presigned_upload.rs  storage.rs  task.rs  workflow.rs
crates/mindia-infra/: Cargo.toml
crates/mindia-infra/src/: lib.rs
crates/mindia-infra/src/archive/: mod.rs
crates/mindia-infra/src/capacity/: checker.rs
crates/mindia-infra/src/middleware/: csrf.rs  security_headers.rs
crates/mindia-infra/src/rate_limit/: limiter.rs
crates/mindia-infra/src/telemetry/: init_opentelemetry.rs  mod.rs
crates/mindia-infra/src/webhook/: retry.rs  service.rs  ssrf.rs
crates/mindia-mcp/: Cargo.toml
crates/mindia-mcp/src/: api_client.rs  lib.rs  main.rs  server.rs  tools.rs
crates/mindia-services/: Cargo.toml
crates/mindia-services/src/: lib.rs  video_orchestration.rs
crates/mindia-services/src/archive/: service.rs
crates/mindia-services/src/services/: anthropic.rs  clamav.rs  mod.rs  s3.rs  semantic_search.rs
crates/mindia-services/src/webhook/: mod.rs  retry.rs  service.rs  ssrf.rs
crates/mindia-storage/: Cargo.toml
crates/mindia-storage/src/: keys.rs  lib.rs  local.rs  s3.rs  traits.rs
crates/mindia-worker/: Cargo.toml
crates/mindia-worker/src/: lib.rs  queue.rs
docs/: README.md  api-keys.md  api-reference.md  audio-transformations.md  authentication.md  authorization.md  batch-operations.md  best-practices.md  clamav.md  configuration.md  deployment-aws.md  document-transformations.md  documents.md  error-handling.md  file-groups.md  folders.md  index.md  installation.md  mcp.md  plugins.md  (+10 more)
src/mindia-mcp/: Cargo.toml
src/mindia-mcp/src/: api_client.rs  lib.rs  main.rs  server.rs  tools.rs
src/mindia-plugins/: Cargo.toml
src/mindia-plugins/src/: aws_rekognition_moderation.rs  claude_vision.rs  google_vision.rs  registry.rs
src/mindia-plugins/src/test_helpers/: fixtures.rs
src/mindia-plugins/tests/: plugin_integration_tests.rs
src/mindia-processing/: Cargo.toml
src/mindia-processing/src/: compression.rs  lib.rs  traits.rs
src/mindia-processing/src/audio/: mod.rs  transformer.rs
src/mindia-processing/src/image/: resize.rs  smart_crop.rs
src/mindia-processing/src/upload/: audio_processor.rs  traits.rs  types.rs  video_processor.rs
src/mindia-processing/src/video/: mod.rs  service.rs  transformer.rs
(+423 files in other folders)
