[package]
name = "mindia-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "media_stats"
path = "src/bin/media_stats.rs"

[[bin]]
name = "list_media"
path = "src/bin/list_media.rs"

[dependencies]
mindia-core = { path = "../mindia-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.4", features = ["derive"] }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
