[package]
name = "mindia-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mindia"
path = "src/main.rs"

[dependencies]
mindia-api-client = { path = "../mindia-api-client" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }