[package]
name = "mindia-db"
version.workspace = true
edition.workspace = true

[dependencies]
mindia-core = { path = "../mindia-core", features = ["sqlx"] }
mindia-storage = { path = "../mindia-storage", optional = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pgvector = { workspace = true, optional = true }

[features]
default = ["storage", "semantic-search"]
storage = ["dep:mindia-storage"]
semantic-search = ["dep:pgvector", "mindia-core/semantic-search"]

audio = []
document = []
video = []
