[package]
name = "mindia-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mindia-mcp"
path = "src/main.rs"

[dependencies]
mindia-api-client = { path = "../mindia-api-client" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
rmcp = { version = "0.3", features = ["server", "transport-io", "macros"] }
schemars = "1.0"
