[package]
name = "mindia-services"
version.workspace = true
edition.workspace = true

[package.metadata.cargo-machete]
ignored = [
    "hex",
    "hmac",
    "sha2",
    "lru",
    "mindia-core",
    "mindia-db",
] # Optional deps/used via features

[dependencies]
mindia-core = { path = "../mindia-core" }
mindia-db = { path = "../mindia-db" }
mindia-storage = { path = "../mindia-storage" }
mindia-processing = { path = "../mindia-processing" }
mindia-infra = { path = "../mindia-infra", optional = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

# Optional dependencies
object_store = { workspace = true, optional = true }
http = { workspace = true, optional = true }
clamav-client = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
lru = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
time = { workspace = true, optional = true }
zip = { workspace = true, optional = true }
tar = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }

[features]
default = [
    "image",
    "video",
    "audio",
    "document",
    "storage-s3",
    "storage-local",
    "clamav",
    "semantic-search",
    "plugin",
    "webhook",
    "analytics",
    "rate-limit",
    "cleanup",
    "capacity",
    "archive",
]

# Media type features (passed through to mindia-processing)
image = ["mindia-processing/image"]
video = ["mindia-processing/video", "dep:mindia-infra", "mindia-infra/capacity", "dep:tempfile", "dep:uuid"]
audio = []
document = []

# Storage backends
storage-s3 = ["dep:object_store", "dep:http"]
storage-local = []

# Optional services
clamav = ["dep:clamav-client"]
semantic-search = [
    "dep:reqwest",
    "dep:lru",
    "mindia-core/semantic-search",
    "mindia-db/semantic-search",
]
# content-moderation moved to mindia-plugins as aws_rekognition_moderation plugin
plugin = []

# Business services (webhook, analytics, cleanup, archive)
webhook = [
    "dep:hmac",
    "dep:sha2",
    "dep:hex",
    "dep:reqwest",
    "dep:subtle",
]
analytics = ["dep:sqlx"]
rate-limit = ["dep:mindia-infra", "mindia-infra/rate-limit"]
cleanup = []
capacity = ["dep:mindia-infra", "mindia-infra/capacity"]
archive = ["dep:time", "dep:zip", "dep:tar"]

# Optional: OpenTelemetry metrics in AnalyticsService
observability-opentelemetry = ["dep:opentelemetry"]

# Convenience features
full = [
    "image",
    "video",
    "audio",
    "document",
    "storage-s3",
    "plugin",
    "clamav",
    "semantic-search",
    "webhook",
    "analytics",
    "rate-limit",
    "cleanup",
    "capacity",
    "archive",
]
