[package]
name = "mindia-storage"
version.workspace = true
edition.workspace = true

[lib]
name = "mindia_storage"
path = "src/lib.rs"

[dependencies]
mindia-core = { path = "../mindia-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
urlencoding = "2.1"
futures = "0.3"
tokio-util = { workspace = true }
# Optional dependencies
aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = [
    "storage-s3",
    "storage-local",
]

# Storage backends
storage-s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
storage-local = []

# Convenience features
full = ["storage-s3", "storage-local"]
