[package]
name = "mindia-storage"
version.workspace = true
edition.workspace = true

[lib]
name = "mindia_storage"
path = "src/lib.rs"

[dependencies]
mindia-core = { path = "../mindia-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
urlencoding = "2.1"
futures = "0.3"
tokio-util = { workspace = true }
object_store = { workspace = true, optional = true }
http = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["storage-s3", "storage-local"]

# Storage backends
storage-s3 = ["dep:object_store", "dep:http"]
storage-local = []

# Convenience features
full = ["storage-s3", "storage-local"]
