[package]
name = "mindia-worker"
version.workspace = true
edition.workspace = true
description = "Background task queue and worker infrastructure for Mindia"

[dependencies]
mindia-core = { path = "../mindia-core" }
mindia-db = { path = "../mindia-db" }
mindia-infra = { path = "../mindia-infra", features = ["rate-limit"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
