[package]
name = "mindia-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mindia-mcp"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
chrono = { workspace = true }
dotenvy = { workspace = true }
urlencoding = "2.1"
