[package]
name = "mindia-plugins"
version.workspace = true
edition.workspace = true

[dependencies]
mindia-core = { path = "../mindia-core" }
mindia-db = { path = "../mindia-db" }
mindia-services = { path = "../mindia-services" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
futures = "0.3"

# Optional dependencies for plugin implementations
reqwest = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
aws-sdk-transcribe = { workspace = true, optional = true }
aws-sdk-rekognition = { workspace = true, optional = true }

[features]
default = [
    "plugin",
    "plugin-assembly-ai",
    "plugin-aws-transcribe",
    "plugin-aws-rekognition",
    "plugin-aws-rekognition-moderation",
    "plugin-google-vision",
    "plugin-claude-vision",
    "plugin-replicate-deoldify",
]

# Core plugin infrastructure (trait, registry, service)
plugin = []

# Individual plugin implementations
# Each plugin requires the base "plugin" feature
plugin-assembly-ai = ["plugin", "dep:reqwest"]
plugin-aws-transcribe = ["plugin", "dep:aws-config", "dep:aws-sdk-transcribe"]
plugin-aws-rekognition = ["plugin", "dep:aws-config", "dep:aws-sdk-rekognition"]
plugin-aws-rekognition-moderation = ["plugin", "dep:aws-config", "dep:aws-sdk-rekognition"]
plugin-google-vision = ["plugin", "dep:reqwest"]
plugin-claude-vision = ["plugin", "dep:reqwest"]
plugin-replicate-deoldify = ["plugin", "dep:reqwest"]

# Convenience features
all-plugins = [
    "plugin-assembly-ai",
    "plugin-aws-transcribe",
    "plugin-aws-rekognition",
    "plugin-aws-rekognition-moderation",
    "plugin-google-vision",
    "plugin-claude-vision",
    "plugin-replicate-deoldify",
]

[dev-dependencies]
mockito = "1.0"
tokio-test = "0.4"
